# oisy-wallet-signer

./: .eslintignore  .eslintrc.json  .gitignore  .npmrc  README.md  SKILL.md  esbuild.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/: dependabot.yml  zizmor.yml
.github/workflows/: demo-checks.yml  demo-deploy.yaml  devops-checks.yml  e2e-snapshots.yml  e2e-tests.yml  lib-checks.yml  lib-next.yml  lib-publish.yml  lib-tests.yml  pr-checks.yml  tests.yml
demo/: .env  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile.e2e  dfx.json  docker-compose.yml  eslint.config.mjs  juno.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.eslint.json  vite.config.ts
demo/scripts/: deploy.sh
demo/src/satellite/: Cargo.toml  satellite_extension.did
demo/src/satellite/src/: lib.rs
e2e/: accounts.spec.ts  build-consent-message.spec.ts  call-canister.spec.ts  connect.spec.ts  consent-message.spec.ts  disconnect.spec.ts  icrc1-transfer.spec.ts  icrc2-approve.spec.ts  icrc2-transfer-from.spec.ts  query-permissions.spec.ts  request-permissions.spec.ts  yolo.spec.ts
e2e/mocks/: consent-message.mocks.ts
e2e/page-objects/: identity.page.ts  party.page.ts  wallet.page.ts
scripts/: compile-idl-js  copy-idl-ts  download-did  esbuild.mjs  i18n.mjs  publish-engines.mjs  publish-strip-engines.mjs  update-version.mjs
src/: icp-wallet.spec.ts  icp-wallet.ts  icrc-wallet.spec.ts  icrc-wallet.ts  index.ts  relying-party.spec.ts  relying-party.ts  signer.spec.ts  signer.ts  tsconfig.json  wallet.spec.ts  wallet.ts
(+258 files in other folders)
